--- a/Curriculo.html
+++ b/Curriculo.html
@@ -5,15 +5,15 @@
     <title>Currículo de Guilherme Camargo Silva</title>
     <style>
         body { 
-            font-family: Arial, sans-serif; 
+            font-family:'Times New Roman', Times, serif;
             margin: 0; 
-            background-color: #c7b7d0; 
+            background-color: #cdffd0; 
         }
         .container { 
             width: 100%; 
             max-width: 800px; 
             margin: auto; 
-            background-color: #ffffff; 
+            background-color: #ffffff;
             padding: 20px; 
             box-shadow: 0 0 10px rgba(0,0,0,0.1); /
             margin-top: 20px;
@@ -39,7 +39,6 @@
     <div class="container">
         <h1>Guilherme Camargo Silva</h1>
         <img src="C:\Users\camar\OneDrive\Desktop\ADS\Foto.jpg" alt="Foto de Guilherme Camargo Silva" class="profile-photo">
-        
         <section>
             <h2>Identificação</h2>
             <p>Nome: Guilherme Camargo Silva</p>
