--- a/Curriculo.html
+++ b/Curriculo.html
@@ -7,38 +7,41 @@
         body { 
             font-family:'Times New Roman', Times, serif;
             margin: 0; 
-            background-color: #cdffd0; 
+            background-color: #2E86C1;
         }
-        .container { 
+        .curriculo { 
             width: 100%; 
             max-width: 800px; 
-            margin: auto; 
+            margin: auto;
             background-color: #ffffff;
             padding: 20px; 
-            box-shadow: 0 0 10px rgba(0,0,0,0.1); /
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /
             margin-top: 20px;
             margin-bottom: 20px;
         }
         h2 { 
             color: #2E86C1; 
         }
+        h1 {
+            color: #0011ff;
+        }
         img.profile-photo { 
-            width: 150px; 
-            height: 150px; 
-            border-radius: 50%; 
+            width: 200px; 
+            height: 200px; 
+            border-radius: 75%; 
         }
         ul { 
             list-style-type: none; 
         }
         li { 
-            margin-bottom: 10px; 
+            margin-bottom: 20px; 
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="curriculo">
         <h1>Guilherme Camargo Silva</h1>
-        <img src="C:\Users\camar\OneDrive\Desktop\ADS\Foto.jpg" alt="Foto de Guilherme Camargo Silva" class="profile-photo">
+        <img src="C:\Users\camar\OneDrive\Desktop\ADS\pkg_util_img.jpeg" alt="Foto de Guilherme Camargo Silva" class="profile-photo">
         <section>
             <h2>Identificação</h2>
             <p>Nome: Guilherme Camargo Silva</p>
