--- a/Curriculo.html
+++ b/Curriculo.html
@@ -66,6 +66,8 @@
                 <li>2023 - e-SeriesPro. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
                 <li>2023 - WEB 3.0. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
                 <li>2023 - DESVENDANDO A BLOCKCHAIN. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
+                <li>2023 - DESVENDANDO A INDÚSTRIA 4.0. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
+                <li>2023 - PREPARAÇÃO PARA O MUNDO DO TRABALHO <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
                 <li>2023 - EMPREENDER SENAI. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
                 <li>2023 - e-SeriesCore. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
                 <li>2022 - ECONOMIA CIRCULAR. <br>Escola SENAI Gaspar Ricardo Junior, SENAI, Brasil.</li>
